<resources>
    <string name="version_label">Ver.2.2.3</string>
    <string name="hint_player_attempt">Scrivi una parola</string>
    <string name="check_attempt_btn_lbl">Verifica Tentativo!</string>
    <string name="win_message">Complimenti hai indovinato la parola segreta!\nNuova Partita?</string>
    <string name="credits_menu_item_lbl">Ringraziamenti</string>
    <string name="about_menu_item_lbl">Info app</string>
    <array name="secret_words">
        <item>android</item>
        <item>paperino</item>
        <item>pcacademy</item>
        <item>programmazione</item>
        <item>ciao mondo</item>
        <item>carbonara</item>
        <item>campionato</item>
        <item>giulio stampa</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_lbl">Autore:\n Alessandro Grande</string>
    <string name="license_lbl">Licenza <a href='https://www.gnu.org/licenses/old-licenses/gpl-2.0.html'>GPL.2</a></string>
    <string name="send_mail_btn_lbl">Contattaci!</string>
    <string name="send_mail_header">Scrivi al programmatore</string>
    <string name="send_btn_lbl">Invia!</string>
    <string name="sender_lbl">Mittente</string>
    <string name="subject_lbl">Oggetto</string>
    <string name="content_lbl">Messaggio</string>
    <string name="send_mail_successfull">Mail inviata con successo!</string>
    <string name="send_mail_error">Problemi durante l\'invio della mail</string>
    <string name="choose_nick_lbl">Scegli le iniziali per il tuo record</string>
    <string name="no_save">Non salvare</string>
    <string name="yes_save">Salva Record</string>
    <string name="record_saved">Record Salvato</string>
    <string name="record_menu_item">Records...</string>
    <string name="personal_best_menu_item">Miei Record</string>
    <string name="back_btn_lbl">Torna alla schermata di gioco</string>
    <string name="welcome_message">Registrazione completata con successo! Ora puoi accedere al gioco online!</string>
    <string name="world_best_menu_item">Classifica Mondiale</string>
    <string name="app_name">Indovina la Parola</string>
    <string name="avatart_chooser_header_text">Scegli il tuo Avatar</string>
    <string name="hint_avatar_choose">Clicca sull\'immagine per scegliere</string>
    <string name="personal_info_header_lbl">Il Mio Profilo</string>
    <string name="change_avatar_btn_lbl">Cambia Avatar</string>
</resources>